// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When a list is provided a custom render function it should allow for custom styles 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class=""
    >
      <button
        class="action"
        id="1"
        role="button"
        type="button"
      >
        <div
          style="padding: 10px;"
        >
          <p
            class="base regular base text"
          >
            Jane Doe
          </p>
          <p
            class="base regular base text"
          >
            123 Main St
          </p>
        </div>
      </button>
    </li>
    <li
      class=""
    >
      <button
        class="action"
        id="2"
        role="button"
        type="button"
      >
        <div
          style="padding: 10px;"
        >
          <p
            class="base regular base text"
          >
            Joe Doe
          </p>
          <p
            class="base regular base text"
          >
            456 Main St
          </p>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`When a list is provided a custom render function it should handle a sectioned list with a custom render function 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Employees
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <button
            class="action customItem"
            id="1"
            role="button"
            type="button"
          >
            <div>
              <p
                class="base regular base text"
              >
                Jane Doe
              </p>
              <p
                class="base regular base text"
              >
                123 Main St
              </p>
            </div>
          </button>
        </li>
        <li
          class="item"
        >
          <button
            class="action customItem"
            id="2"
            role="button"
            type="button"
          >
            <div>
              <p
                class="base regular base text"
              >
                Joe Doe
              </p>
              <p
                class="base regular base text"
              >
                456 Main St
              </p>
            </div>
          </button>
        </li>
      </ul>
    </li>
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Customers
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <button
            class="action customItem"
            id="3"
            role="button"
            type="button"
          >
            <div>
              <p
                class="base regular base text"
              >
                Milton Bradley
              </p>
              <p
                class="base regular base text"
              >
                123 Fake St
              </p>
            </div>
          </button>
        </li>
        <li
          class="item"
        >
          <button
            class="action customItem"
            id="4"
            role="button"
            type="button"
          >
            <div>
              <p
                class="base regular base text"
              >
                Tony Redman
              </p>
              <p
                class="base regular base text"
              >
                456 Fake St
              </p>
            </div>
          </button>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`When a list is provided a custom render function it should use the custom render instead of default ListItem behaviour 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <button
        class="action customItem"
        id="1"
        role="button"
        type="button"
      >
        <div>
          <p
            class="base regular base text"
          >
            Jane Doe
          </p>
          <p
            class="base regular base text"
          >
            123 Main St
          </p>
        </div>
      </button>
    </li>
    <li
      class="item"
    >
      <button
        class="action customItem"
        id="2"
        role="button"
        type="button"
      >
        <div>
          <p
            class="base regular base text"
          >
            Joe Doe
          </p>
          <p
            class="base regular base text"
          >
            456 Main St
          </p>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`renders 1 List item with all the props 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Notification
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <a
            class="action isActive hoverable"
            href="#"
            id="1"
          >
            <div
              class="defaultContent"
            >
              <div
                class="icon"
              >
                <svg
                  data-testid="checkmark"
                  style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
                    fill="currentColor"
                    style="fill: var(--color-green);"
                  />
                </svg>
              </div>
              <div
                class="info"
              >
                <h5
                  class="base bold base heading"
                >
                  Jordan Yeo completed a visit
                </h5>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Build a deck
                  </span>
                </p>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Fa la la la la
                  </span>
                </p>
                <p
                  class="base regular base textSecondary"
                >
                  <span
                    class="base regular small italic"
                  >
                    Sep 24, 2019
                  </span>
                </p>
              </div>
              <div
                class="amount"
              >
                <p
                  class="base regular base text"
                >
                  <b
                    class="base bold"
                  >
                    $30.00
                  </b>
                </p>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`renders a list with multiple sections 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Notifications
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <a
            class="action isActive hoverable"
            href="#"
            id="1"
          >
            <div
              class="defaultContent"
            >
              <div
                class="icon"
              >
                <svg
                  data-testid="checkmark"
                  style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
                    fill="currentColor"
                    style="fill: var(--color-green);"
                  />
                </svg>
              </div>
              <div
                class="info"
              >
                <h5
                  class="base bold base heading"
                >
                  Jordan Yeo completed a visit
                </h5>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Build a deck
                  </span>
                </p>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Fa la la la la
                  </span>
                </p>
                <p
                  class="base regular base textSecondary"
                >
                  <span
                    class="base regular small italic"
                  >
                    Sep 24, 2019
                  </span>
                </p>
              </div>
              <div
                class="amount"
              >
                <p
                  class="base regular base text"
                >
                  <b
                    class="base bold"
                  >
                    $30.00
                  </b>
                </p>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </li>
    <li
      class="section"
    >
      <div
        class="sectionHeader"
      >
        <h4
          class="base bold large"
        >
          Urgent Notifications
        </h4>
      </div>
      <ul
        class="list"
      >
        <li
          class="item"
        >
          <a
            class="action isActive hoverable"
            href="#"
            id="1"
          >
            <div
              class="defaultContent"
            >
              <div
                class="icon"
              >
                <svg
                  data-testid="checkmark"
                  style="fill: var(--color-icon); display: inline-block; vertical-align: middle; width: 24px; height: 24px;"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4.703 12.029a1 1 0 1 0-1.414 1.414l4.699 5.293a1 1 0 0 0 1.414 0L20.695 7.443a1 1 0 1 0-1.414-1.414L8.695 16.615l-3.992-4.586Z"
                    fill="currentColor"
                    style="fill: var(--color-green);"
                  />
                </svg>
              </div>
              <div
                class="info"
              >
                <h5
                  class="base bold base heading"
                >
                  Jordan Yeo requires assistance
                </h5>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Foo bar
                  </span>
                </p>
                <p
                  class="base regular base text"
                >
                  <span
                    class="truncate"
                  >
                    Baz
                  </span>
                </p>
                <p
                  class="base regular base textSecondary"
                >
                  <span
                    class="base regular small italic"
                  >
                    Sep 25, 2019
                  </span>
                </p>
              </div>
              <div
                class="amount"
              >
                <p
                  class="base regular base text"
                >
                  <b
                    class="base bold"
                  >
                    $40.00
                  </b>
                </p>
              </div>
            </div>
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`should render a button list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <button
        class="action hoverable"
        id="1"
        role="button"
        type="button"
      >
        <div
          class="defaultContent"
        >
          <div
            class="info"
          >
            <p
              class="base regular base text"
            >
              <span
                class="truncate"
              >
                Click me
              </span>
            </p>
          </div>
        </div>
      </button>
    </li>
  </ul>
</div>
`;

exports[`should render a link with url list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="defaultContent"
        >
          <div
            class="info"
          >
            <p
              class="base regular base text"
            >
              <span
                class="truncate"
              >
                Learn more
              </span>
            </p>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`should render an a tag with url and on click list item 1`] = `
<div>
  <ul
    class="list"
  >
    <li
      class="item"
    >
      <a
        class="action hoverable"
        href="/path/to/stuff"
        id="1"
      >
        <div
          class="defaultContent"
        >
          <div
            class="info"
          >
            <p
              class="base regular base text"
            >
              <span
                class="truncate"
              >
                Learn more
              </span>
            </p>
          </div>
        </div>
      </a>
    </li>
  </ul>
</div>
`;

exports[`shouldn't render a list item if it's given an empty array 1`] = `
<div>
  <ul
    class="list"
  />
</div>
`;
